# Portfolio

./: .gitignore  about.html  bookshelf.html  build.sh  index.html  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0003_blogpost_tags.py
blog/templates/blog/: create-blog-post.html  index.html  view-blog-post.html
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: create-post.html  edit-post.html  index.html  posts.html
home/: urls.py  views.py
home/templates/home/: django-todo.html  index.html  resume.html
home/templates/home/projects/: mini-rpg.html
old/: requirements.txt
old/blog/: models.py  urls.py
old/blog/migrations/: 0002_alter_blogpost_slug.py
old/blog/templates/blog/: view-blog-post.html
old/core/migrations/: 0001_initial.py
old/dashboard/templates/dashboard/: create-post.html  edit-post.html  index.html  posts.html
old/home/templates/home/: index.html  resume.html
old/media/: info.txt
old/static/ckeditor/: build-config.js  ckeditor.js
old/static/ckeditor/skins/moono-lisa/: editor.css  editor_ie.css  editor_ie8.css  editor_iequirks.css
old/templates/registration/: logged_out.html
portfolio_project/: settings.py  urls.py
static/ckeditor/skins/moono-lisa/: editor_gecko.css
static/js/: ajax.js
templates/: base.html  dashboard-base.html  login-base.html
templates/registration/: login.html
