[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Personal website"
authors = ["Josh Bright <josh.bright@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.4"
django-taggit = "^1.5.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
